@@ -1,35 +1,31 @@
-package com.API.library.Service;
+package com.API.library.service;
 
-import com.API.library.Dto.DadosAtualizacaoLivro;
-import com.API.library.Dto.DadosCadastroLivro;
-import com.API.library.Entity.Status;
-import com.API.library.Entity.Livro;
-import com.API.library.Repository.LivroRepository;
+import com.API.library.dto.DadosAtualizacaoLivro;
+import com.API.library.dto.DadosCadastroLivro;
+import com.API.library.entity.Status;
+import com.API.library.entity.Livro;
+import com.API.library.repository.LivroRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class LivroService {
 
     @Autowired
-    private static LivroRepository livroRepository;
+    private final LivroRepository livroRepository;
 
     public LivroService(LivroRepository livroRepository) {
         this.livroRepository = livroRepository;
     }
-
-    public List<Livro> getLivroRepository(){
-        return livroRepository.findAll();
-    }
     public List<Livro> listarTodosLivros(){
         return livroRepository.findAll();
     }
-    public static List<Livro> listaLivros(){
-        return livroRepository.findAll().stream().filter(l -> l.getStatus() == Status.DISPONIVEL).collect(Collectors.toList());
+    public List<Livro> listaLivrosDisponivel(){
+        return listarTodosLivros().stream().filter(l -> l.getStatus() == Status.DISPONIVEL).toList();
     }
+
     public void criarNovoLivro(DadosCadastroLivro dados) {
         livroRepository.save(new Livro(dados, Status.DISPONIVEL));
     }
@@ -37,7 +33,6 @@ public class LivroService {
         Livro livro = livroRepository.getReferenceById(Math.toIntExact(dados.id()));
         livro.atualizarInformacoes(dados);
     }
-
     public void inativarLivro(Long id){
         var livro = livroRepository.getReferenceById(Math.toIntExact(id));
         livro.inativo();
